--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 websockets==12.0
+psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pydantic==2.8.2
+pydantic==2.4.2
 pydantic-settings==2.0.3
+email-validator==2.1.0
 python-dotenv==1.0.0
