--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,20 @@ services:
   - type: web
     name: websocket-chat-app
     runtime: python3
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     plan: free
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: false
+    healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
-    healthCheckPath: /health
+      - key: DEBUG
+        value: false
+      - key: CORS_ORIGINS
+        value: "*"
+    scaling:
+      minInstances: 1
+      maxInstances: 3
